compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_fullwidth_comma.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2257
expression: "pub fn main() { #(1， 2) }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { #(1， 2) }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:20
  │
1 │ pub fn main() { #(1， 2) }
  │                    ^^ Unexpected character

This looks like ascii comma, but it is actually the unicode fullwidth
comma.
